--- a/src/translations/transifex.yml
+++ b/src/translations/transifex.yml
@@ -1,6 +1,7 @@
-filters:
-  - filter_type: file
-    file_format: JSON
-    source_language: en
-    source_file: https://github.com/buda-base/public-digital-library/tree/master/src/translations/en.json
-    translation_files_expression: 'https://github.com/buda-base/public-digital-library/tree/master/src/translations/other/<lang>.json'
+git:
+  filters:
+    - filter_type: file
+      file_format: JSON
+      source_language: en
+      source_file: https://github.com/buda-base/public-digital-library/tree/master/src/translations/en.json
+      translation_files_expression: 'https://github.com/buda-base/public-digital-library/tree/master/src/translations/other/<lang>.json'
