--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -538,7 +538,7 @@
    },
    "footer": {
       "BDRC": "Buddhist Digital Resource Center",
-      "adr1": "1430 Massachusetts Ave., 5th floor",
+      "adr1": "1430 Massachusetts Avenue, 5th floor",
       "adr2": "Cambridge, MA, USA 02138",
       "adr": "Mailing address:<br/>198 Tremont St. #421<br/>Boston, MA, USA 02116",
       "contact": "CONTACT US",
