add links to first/last page in etext viewer (#678)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -608,7 +608,9 @@
       "pdferror2":"Server error",
       "range":"range",
       "full":"Full",
-      "ok":"ok"
+      "ok":"ok",
+      "firstP": "First page",
+      "lastP": "Last page"
    },
    "mirador": {
       "return": "བུདྡྷ་ལ་ཕྱིར་ལོག",
