prepare UI & route for #697

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -103,7 +103,8 @@
       "resources":"resources",
       "guided":"Guided search",
       "browse":"browse",
-      "home":"home"      
+      "home":"home",
+      "collections":"Browse collections subscribed to by your institution" 
    },
    "Lsidebar": {
       "sortBy": {
