fix for link in tooltip on proxied site

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -99,7 +99,7 @@
       "bookmarks": "Bookmarks",
       "results": "Search results for",
       "instances": "versions of",
-      "proxied":"This is a proxied version provided by your institution's library subscription; login is disabled. If you are part of a subscribing institution, you can download PDFs of texts in the subscribed collections. If you have an account and wish to use it, please go to <tag href='https://library.bdrc.io' target='_blank'>https://library.bdrc.io<\/tag>",
+      "proxied":"This is a proxied version provided by your institution's library subscription; login is disabled. If you are part of a subscribing institution, you can download PDFs of texts in the subscribed collections. If you have an account and wish to use it, please go to <tag href='https://{{library}}' target='_blank'>https://{{library}}<\/tag>",
       "resources":"resources",
       "guided":"Guided search",
       "browse":"browse",
