--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -252,7 +252,8 @@
       "tmp:incomplete":"Incomplete",
       "tmp:scans":"scans",
       "tmp:colophonMatch":"Colophon Match",
-      "tmp:placeContainsDesc":"Located in (descendents)"
+      "tmp:placeContainsDesc":"Located in (descendents)",
+      "tmp:GISCoordinates":"GIS Coordinates"
    },
    "result": {
       "open": "Open",
