WIP: add link to IA in outline (#684)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -615,7 +615,8 @@
       "full":"Full",
       "ok":"ok",
       "firstP": "First page",
-      "lastP": "Last page"
+      "lastP": "Last page",
+      "openIA": "Open on Internet Archive"
    },
    "mirador": {
       "return": "return to BUDA",
