--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -615,7 +615,8 @@
       "full":"Full",
       "ok":"ok",
       "firstP": "First page",
-      "lastP": "Last page"
+      "lastP": "Last page",
+      "openIA": "Open on Internet Archive"
    },
    "mirador": {
       "return": "བུདྡྷ་ལ་ཕྱིར་ལོག",
