--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -255,7 +255,10 @@
       "tmp:placeContainsDesc":"Located in (descendents)",
       "tmp:GISCoordinates":"GIS Coordinates",
       "tmp:altLabelName":"Variant Name",
-      "tmp:altLabelTitle":"Variant Title"
+      "tmp:altLabelTitle":"Variant Title",
+      "tmp:hasMatch":"Exact Match",
+      "tmp:hasExactMatch":"Exact Match",
+      "tmp:isExactMatch":"Exact Full Match"
    },
    "result": {
       "open": "开放",
