--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -396,7 +396,9 @@
       "see10More": "See 10 More",
       "showR": "Show {{count}} reproductions",
       "hideR": "Hide reproductions",
-      "previewN": "preview {{count}}"
+      "previewN": "preview {{count}}",
+      "tilt1":"Please rotate your device",
+      "tilt2":"This content is optimised for landscape mode"
    },
    "lang": {
       "en": "英语",
