--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -154,7 +154,11 @@
       "volumeN": "Volume Number",
       "roleN": "Role Name",
       "showAll":"show all matches",
-      "hideAll":"best matches only"
+      "hideAll":"best matches only",
+      "exact":"partial or exact match",
+      "exactM":"exact match only",
+      "exactF":"exact full match only",
+      "exactMF":"any exact match"
    },
    "copyright": {
       "open": "Open Access",
