--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -743,6 +743,7 @@
       "dlPDF":"Download PDF",
       "dlZIP":"Download image files",
       "downloadI":"Download Images",
+      "downloading":"Downloading...",
       "dotDashed": "Dots &amp; Dashes",
       "dropToLoad": "Drop to Load Manifest",
       "edit": "Edit",
@@ -763,6 +764,7 @@
       "fullScreenTooltip": "Toggle full screen",
       "fullScreenWindowTooltip": "Toggle this window to full screen",
       "getPDF":"Get PDF",
+      "getRAW":"Download original file for this image",
       "getZIP":"Get image files",
       "genPDF":"Generating PDF...",
       "genZIP":"Generating image files...",
