--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -707,6 +707,7 @@
       "dlZIP":"Download image files",
       "dotDashed": "点和虚线",
       "downloadI":"Download Images",
+      "downloading":"Downloading...",
       "dropToLoad": "拖放以装载清单",
       "edit": "编辑",
       "editModalBtnDeleteAnnotation": "删除这个注释",
@@ -725,6 +726,7 @@
       "fullScreenTooltip": "进入/退出全屏",
       "fullScreenWindowTooltip": "进入/退出全屏",
       "getPDF":"Get PDF",
+      "getRAW":"Download original file for this image",
       "getZIP":"Get image files",
       "genPDF":"Generating PDF...",
       "genZIP":"Generating image files...",
