--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -816,6 +816,7 @@
       "rectangleTooltip": "Rectangle annotation",
       "related": "Related",
       "resetTooltip": "Reset image",
+      "results": "return to results",
       "return":"return to BUDA",
       "rights": "Rights",
       "rightsStatus": "Rights Status",
