--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -796,6 +796,7 @@
       "rectangleTooltip": "Rectangle",
       "related": "Ressources liées",
       "resetTooltip": "Réinitialiser",
+      "results": "return to results",
       "rights": "Droits",
       "rightsStatus": "Statut des droits",
       "rotateLeftTooltip": "Rotation antihoraire 90&deg;",
