--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -763,6 +763,7 @@
       "range":"range",
       "rectangleTooltip": "长方形注释",
       "resetTooltip": "重置图像",
+      "results": "return to results",
       "return":"回到BUDA",
       "rights": "版权",
       "rightsStatus": "版权状态",
