--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -706,6 +706,7 @@
       "pdferror2":"Server error",    
       "quality0":"ང་ཚོའི་བཤེར་པར་ཁག་གི་སྤུས་ཀ་ཞན་པའི་རྐྱེན་གྱིས་ཀློག་དཀའ་བ་དང་\nགོ་རིམ་འཛོལ་བའི་རིགས་ཡོད་པས་ཁྱེད་ལ་དགོངས་དག་ཞུ། \nང་ཚོས་ལྟ་ཚུལ་ནི་སྐྱོན་ཡོད་ཀྱང་དགོས་ངེས་ཅན་ལ་མེད་པ་ལས་ཡོད་པ་དགེ་མཚན་ཆེ་བར་དམིགས་ནས་བཞག་པ་ཙམ་ཡིན།",
       "range":"range",
+      "results": "return to results",
       "return":"བུདྡྷ་ལ་ཕྱིར་ལོག",
       "showE":"འཕྲུལ་ཡིག་སྟོན།"
    }     
