--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -813,6 +813,7 @@
       "rectangleTooltip": "Rectangle annotation",
       "related": "Related",
       "resetTooltip": "Reset image",
+      "results": "return to results",
       "return":"return to BUDA",
       "rights": "Rights",
       "rightsStatus": "Rights Status",
