--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -817,6 +817,7 @@
       "related": "Related",
       "resetTooltip": "Reset image",
       "results": "return to results",
+      "resultsMob": "results",
       "return":"return to BUDA",
       "rights": "Rights",
       "rightsStatus": "Rights Status",
