--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -764,6 +764,7 @@
       "rectangleTooltip": "长方形注释",
       "resetTooltip": "重置图像",
       "results": "return to results",
+      "resultsMob": "results",
       "return":"回到BUDA",
       "rights": "版权",
       "rightsStatus": "版权状态",
