--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -797,6 +797,7 @@
       "related": "Ressources liées",
       "resetTooltip": "Réinitialiser",
       "results": "return to results",
+      "resultsMob": "results",
       "rights": "Droits",
       "rightsStatus": "Statut des droits",
       "rotateLeftTooltip": "Rotation antihoraire 90&deg;",
