--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -814,6 +814,7 @@
       "related": "Related",
       "resetTooltip": "Reset image",
       "results": "return to results",
+      "resultsMob": "results",
       "return":"return to BUDA",
       "rights": "Rights",
       "rightsStatus": "Rights Status",
