--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -259,7 +259,9 @@
       "tmp:placeContainsDesc":"មានទីតាំងនៅ (មនុស្សជំនាន់ក្រោយ)",
       "tmp:GISCoordinates":"កូអ័រដោនេ GIS",
       "tmp:altLabelName":"ឈ្មោះផ្សេងទៀត",
-      "tmp:altLabelTitle":"ចំណងជើងផ្សេងទៀត"
+      "tmp:altLabelTitle":"ចំណងជើងផ្សេងទៀត",
+      "tmp:inDLD":"Availability on DLD",
+      "tmp:available":"Available on"
    },
    "guided":{
       "keyword":"keyword",
