ask user what to do when pdf not available on DLD (#734)

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -261,7 +261,7 @@
       "tmp:altLabelName":"Variant Name",
       "tmp:altLabelTitle":"Variant Title",
       "tmp:inDLD":"Availability on DLD",
-      "tmp:available":"Available on"
+      "tmp:available":"Available"
    },
    "guided":{
       "keyword":"keyword",
