--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -261,7 +261,7 @@
       "tmp:altLabelName":"ឈ្មោះផ្សេងទៀត",
       "tmp:altLabelTitle":"ចំណងជើងផ្សេងទៀត",
       "tmp:inDLD":"Availability on DLD",
-      "tmp:available":"Available on"
+      "tmp:available":"Available"
    },
    "guided":{
       "keyword":"keyword",
