--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -428,7 +428,8 @@
       "hideR": "Hide reproductions",
       "previewN": "preview {{count}}",
       "tilt1":"Please rotate tour device",
-      "tilt2":"This content is optimised for landscape mode"
+      "tilt2":"This content is optimised for landscape mode",
+      "DLD":"This text is not available on your DLD.\nWould you like to open it online instead?"
    },
    "lang": {
       "en": "English",
