--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -428,7 +428,8 @@
       "hideR": "លាក់ការផលិតជាថ្មី",
       "previewN": "មើលជាមុន {{count}}",
       "tilt1":"Please rotate your device",
-      "tilt2":"This content is optimised for landscape mode"
+      "tilt2":"This content is optimised for landscape mode",
+      "DLD":"This text is not available on your DLD.\nWould you like to open it online instead?"
    },
    "lang": {
       "en": "អង់គ្លេស",
