add expand/hide button for notes on results page (#716)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -432,7 +432,8 @@
       "previewN": "preview {{count}}",
       "tilt1":"Please rotate your device",
       "tilt2":"This content is optimised for landscape mode",
-      "DLD":"This text is not available on your DLD.\nWould you like to open it online instead?"
+      "DLD":"This text is not available on your DLD.\nWould you like to open it online instead?",
+      "expand":"Expand"
    },
    "lang": {
       "en": "English",
