--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -408,7 +408,8 @@
       "previewN": "སྡོན་བལྟའི་ {{count}}",
       "tilt1":"Please rotate your device",
       "tilt2":"This content is optimised for landscape mode",
-      "DLD":"This text is not available on your DLD.\nWould you like to open it online instead?"
+      "DLD":"This text is not available on your DLD.\nWould you like to open it online instead?",
+      "expand":"Expand"
    },
    "lang": {
       "en": "ཨིན་སྐད།",
