--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -492,7 +492,8 @@
          "incHelper": "Sanskrit or Pāli",
          "unicode": "Unicode",
          "xTwktt":"Trent Walker Khmer-Tai Translit.",
-         "hani": "Original - no conversion"
+         "hani": "Original - no conversion",
+         "fr":"French"
       },
       "x": "སྒྲ་ཐད་བསྒྱུར།",
       "latn": "སྒྲ་ཐད་བསྒྱུར།"
