--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -492,7 +492,8 @@
          "incHelper": "Sanskrit or Pāli",
          "unicode": "Unicode",
          "xTwktt":"Trent Walker Khmer-Tai Translit.",
-         "hani": "Original - no conversion"
+         "hani": "Original - no conversion",
+         "fr":"French"
       },
       "x": "Transliterated",
       "latn": "Transliterated"
