--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -797,6 +797,7 @@
       "goto":"Go to img.",
       "grayscaleTooltip": "Toggle grayscale",
       "imageManipulationTooltip": "Toggle image manipulation",
+      "image": "Image",
       "images": "Images",
       "imagesFor": "Images for",
       "imageView": "Image View",
