use fallback language for unsupported locale on auth0 page (bo->zh & km->en)

--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -29,7 +29,7 @@
       "subsubmessage_account3": "",
       "subsubmessage_account4": "",
       "subsubmessage_account5": "",
-      "subsubmessage_auth": "",
+      "subsubmessage_auth": "All users, including users with existing accounts on tbrc.org, will need to register for a free BDRC account for full access.",
       "search": "ស្វែងរក",
       "choose": "ជ្រើសរើសភាសា",
       "start": "ចាប់ផ្តើមវាយអក្សរ បន្ទាប់មកជ្រើសរើសស្វែងរកភាសា",
