--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -29,7 +29,7 @@
       "subsubmessage_account3": "",
       "subsubmessage_account4": "",
       "subsubmessage_account5": "",
-      "subsubmessage_auth": "",
+      "subsubmessage_auth": "All users, including users with existing accounts on tbrc.org, will need to register for a free BDRC account for full access.",
       "search": "搜索",
       "choose": "选择语言",
       "start": "开始输入并选择语言",
