--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -524,7 +524,8 @@
          "noresultsAsso": "គ្មានលទ្ធផលពាក់ព័ន្ធសម្រាប់ {{keyword}} {{type}}",
          "facets":" ជាមួយនឹងតម្រងដែលអ្នកកំណត់",
          "persons":"<parag>BDRC មានផ្ទុកកំណត់ត្រាមនុស្សរាប់ពាន់នាក់ អ្នកអាចព្យាយាមកែសម្រួលការស្វែងរករបស់អ្នកដើម្បីទទួលបានលទ្ធ​ផលប្រសើរបំផុត។<newline/><list>ស្វែងរកលើស្រ្តីងនៃព្យាង្គដែលខ្លីជាងនេះ ដោយលុបចំណងជើង  ឈ្មោះភូមិសាស្ត្រ ជាដើម<newline/>ឧ៖ <ita>'jam dbyangs nor bu</ita> ជំនួសឱ្យ <ita>co ne sa skyong 'jam dbyangs nor bu</ita></list><list>ពិនិត្យទ្វេដងលើកំហុសអក្ខរាវិរុទ្ធក្នុងការស្វែងរករបស់អ្នក</list></parag>",
-         "instances":"<parag>BDRC មានផ្ទុកអត្ថបទរាប់ពាន់ អ្នកអាចព្យាយាមកែសម្រួលការស្វែងរករបស់អ្នកដើម្បីទទួលបានលទ្ធ​ផលប្រសើរបំផុត។<newline/><list>ស្វែងរកលើស្ត្រីងនៃព្យាង្គដែលខ្លីជាងនេះ​ ជាពិសេសផ្នែកចម្បងនៃចំណងជើង <newline/>ឧ៖ <ita>lam rim chung ngu'i zin bris</ita> ជំនួសឱ្យ <ita>lam rim chung ngu'i zin bris blo gsal rgya mtsho'i 'jug ngogs</ita></list><list>ពិនិត្យទ្វេដងលើកំហុសអក្ខរាវិរុទ្ធក្នុងការស្វែងរករបស់អ្នក</list></parag>"
+         "instances":"<parag>BDRC មានផ្ទុកអត្ថបទរាប់ពាន់ អ្នកអាចព្យាយាមកែសម្រួលការស្វែងរករបស់អ្នកដើម្បីទទួលបានលទ្ធ​ផលប្រសើរបំផុត។<newline/><list>ស្វែងរកលើស្ត្រីងនៃព្យាង្គដែលខ្លីជាងនេះ​ ជាពិសេសផ្នែកចម្បងនៃចំណងជើង <newline/>ឧ៖ <ita>lam rim chung ngu'i zin bris</ita> ជំនួសឱ្យ <ita>lam rim chung ngu'i zin bris blo gsal rgya mtsho'i 'jug ngogs</ita></list><list>ពិនិត្យទ្វេដងលើកំហុសអក្ខរាវិរុទ្ធក្នុងការស្វែងរករបស់អ្នក</list></parag>",
+         "error": "There was an error processing your search: {{keyword}} [{{language}}] {{type}}<newline/>Please check syntax or try another search"
       },
       "seeO": "មើលលទ្ធផលជាប្រភេទទិន្នន័យផ្សេងទៀត",
       "backToW": "ត្រលប់ទៅកាន់ការងារវិញ",
