add message with link to update to latest version (#767)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -104,7 +104,8 @@
       "guided":"ལམ་སྟོན་ཡོད་པའི་འཚོལ་ཞིབ།",
       "browse":"མིག་བཤེར།",
       "home":"གཙོ་ངོས།",
-      "collections":"ཁྱེད་ཀྱི་སློབ་གླིང་གིས་སྔོན་མངགས་བྱས་ཡོད་པའི་ཕྱོགས་བསྒྲིགས་ལ་མིག་བཤེར་བྱོས།"
+      "collections":"ཁྱེད་ཀྱི་སློབ་གླིང་གིས་སྔོན་མངགས་བྱས་ཡོད་པའི་ཕྱོགས་བསྒྲིགས་ལ་མིག་བཤེར་བྱོས།",
+      "update":"Update to latest version of BUDA"
    },
    "Lsidebar": {
       "sortBy": {
