--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -104,7 +104,8 @@
       "guided":"Guided search",
       "browse":"browse",
       "home":"home",
-      "collections":"Browse collections subscribed to by your institution"
+      "collections":"Browse collections subscribed to by your institution",
+      "update":"Update to latest version of BUDA"
    },
    "Lsidebar": {
       "sortBy": {
