--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -104,7 +104,8 @@
       "guided":"ការស្វែងរកតាមការណែនាំ",
       "browse":"រុករក",
       "home":"ទំព័រដើម",
-      "collections":""
+      "collections":"",
+      "update":"Update to latest version of BUDA"
    },
    "Lsidebar": {
       "sortBy": {
