--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -50,7 +50,11 @@
             "text":"<parag>Relevant bibliographies and secondary sources concerning Cambodian manuscripts <nbsp>—coming soon</nbsp>. </parag>"
          }
       },
-      "help":""
+      "help":"",
+      "all-collections":"All collections",
+      "female-authors":"Female authors",
+      "works-by-female-authors":"Works by female authors",
+      "instances-by-female-authors":"Versions by female authors"
    },
    "types": {
       "any": "任意",
