--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -270,7 +270,9 @@
       "tmp:hasExactMatch":"Exact Match",
       "tmp:isExactMatch":"Exact Full Match",
       "tmp:inDLD":"Availability on DLD",
-      "tmp:available":"Available"
+      "tmp:available":"Available",
+      "tmp:nbMembers":"Members",
+      "tmp:nbParts":"Parts"
    },
    "guided":{
       "keyword":"keyword",
