--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -266,7 +266,9 @@
       "tmp:altLabelName":"Variant Name",
       "tmp:altLabelTitle":"Variant Title",
       "tmp:inDLD":"Availability on DLD",
-      "tmp:available":"Available"
+      "tmp:available":"Available",
+      "tmp:nbMembers":"Members",
+      "tmp:nbParts":"Parts"
    },
    "guided":{
       "keyword":"keyword",
