improve outline node display when instance of work (#779)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -646,7 +646,8 @@
       "ok":"འགྲིག",
       "firstP": "ཤོག་ལྡེབས་དང་བོ།",
       "lastP": "ཤོག་ལྡེབས་ཐ་མ།",
-      "openIA": "དྲ་ཐོག་ཡིག་མཛོད་ནང་ཁ་ཕྱེས།"
+      "openIA": "དྲ་ཐོག་ཡིག་མཛོད་ནང་ཁ་ཕྱེས།",
+      "openW":"Open Work"
    },
    "mirador": {
       "return": "བུདྡྷ་ལ་ཕྱིར་ལོག",
