--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -662,7 +662,8 @@
       "ok":"ok",
       "firstP": "First page",
       "lastP": "Last page",
-      "openIA": "Open on Internet Archive"
+      "openIA": "Open on Internet Archive",
+      "openW":"Open Work"
    },
    "mirador": {
       "return": "return to BUDA",
