--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -662,7 +662,8 @@
       "ok":"យល់ព្រម",
       "firstP": "ទំព័រទីមួយ",
       "lastP": "ទំព័រចុងក្រោយ",
-      "openIA": "បើកនៅលើបណ្ណសារអ៊ីនធឺណិត"
+      "openIA": "បើកនៅលើបណ្ណសារអ៊ីនធឺណិត",
+      "openW":"Open Work"
    },
    "mirador": {
       "return": "ត្រលប់ទៅកាន់ BUDA",
