--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -646,7 +646,8 @@
       "ok":"ok",
       "firstP": "First page",
       "lastP": "Last page",
-      "openIA": "Open on Internet Archive"
+      "openIA": "Open on Internet Archive",
+      "openW":"Open Work"
    },
    "mirador": {
       "return": "回到BUDA",
