--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -721,7 +721,8 @@
       "endV": "End volume: {{num}}",
       "endP": "End image: {{num}}",
       "endL": "End line: {{num}}",
-      "tooltip": "No image indication found.<newL/>You might have to find the right page by yourself."
+      "tooltip": "No image indication found.<newL/>You might have to find the right page by yourself.",
+      "line": "{{num}}"
    },
    "footer": {
       "BDRC": "Buddhist Digital Resource Center",
