--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -705,7 +705,8 @@
       "endV": "បរិមាណបញ្ចប់៖ {{num}}",
       "endP": "រូបភាពបញ្ចប់៖ {{num}}",
       "endL": "បន្ទាត់បញ្ចប់៖ {{num}}",
-      "tooltip": "រកមិនឃើញការបង្ហាររូបភាពនោះទេ។<newL/>អ្នកអាចនឹងត្រូវស្វែងរកទំព័រដែលត្រឹមត្រូវដោយខ្លួនឯង។"
+      "tooltip": "រកមិនឃើញការបង្ហាររូបភាពនោះទេ។<newL/>អ្នកអាចនឹងត្រូវស្វែងរកទំព័រដែលត្រឹមត្រូវដោយខ្លួនឯង។",
+      "line": "{{num}}"
    },
    "footer": {
       "BDRC": "មជ្ឈមណ្ឌលធនធានឌីជីថលពុទ្ធសាសនា",
