--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -663,7 +663,8 @@
       "firstP": "ទំព័រទីមួយ",
       "lastP": "ទំព័រចុងក្រោយ",
       "openIA": "បើកនៅលើបណ្ណសារអ៊ីនធឺណិត",
-      "openW":"Open Work"
+      "openW":"Open Work",
+      "find":"Find in dictionary"
    },
    "mirador": {
       "return": "ត្រលប់ទៅកាន់ BUDA",
