--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -647,7 +647,8 @@
       "firstP": "First page",
       "lastP": "Last page",
       "openIA": "Open on Internet Archive",
-      "openW":"Open Work"
+      "openW":"Open Work",
+      "find":"Find in dictionary"
    },
    "mirador": {
       "return": "回到BUDA",
